--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
 </head>
 
 <body>
-
+  <img src="/images/ted-and-gregs-logo.svg" style="width: 200px; height: auto;" alt="Ted and Greg's Pain Cream Logo">
   <h1>Ted and Greg's Pain Cream</h1>
+  <h2>Put some science on it.</h2>
+
+  <p>Science-based Relief has a smell. And it’s kind of minty.<br>
+(our newsletter is aroma-free though)</p>
 
   <div id="mc_embed_shell">
     <div id="mc_embed_signup">
