--- a/index.html
+++ b/index.html
@@ -54,32 +54,34 @@
 </head>
 
 <body>
-  <img src="/images/ted-and-gregs-logo.svg" style="width: 200px; height: auto;" alt="Ted and Greg's Pain Cream Logo">
-  <h1>Ted and Greg's Pain Cream</h1>
-  <h2>Put some science on it.</h2>
+  <div style="width:100%; max-width:500px; margin:0 auto; padding:1rem;">
+    <img src="/images/ted-and-gregs-logo.svg" style="width: 100%; height: auto;" alt="Ted and Greg's Pain Cream Logo">
+    <h1>Ted and Greg's Pain Cream</h1>
+    <h2>Put some science on it.</h2>
 
-  <p>Science-based Relief has a smell. And it’s kind of minty.<br>
-(our newsletter is aroma-free though)</p>
+    <p>Science-based Relief has a smell. And it’s kind of minty.<br>
+  (our newsletter is aroma-free though)</p>
 
-  <div id="mc_embed_shell">
-    <div id="mc_embed_signup">
-      <form action="https://tedsbrainscience.us15.list-manage.com/subscribe/post?u=6cc24d844e32d5cbc7dda7955&amp;id=14538d79ab&amp;f_id=00d198e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-        <div id="mc_embed_signup_scroll">
-          <h2>Subscribe</h2>
-          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-          <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" autocomplete="email"></div>
-          <div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""></div>
-          <div class="mc-field-group"><label for="mce-LNAME">Last Name </label><input type="text" name="LNAME" class=" text" id="mce-LNAME" value=""></div>
-          <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display: none;"></div>
-            <div class="response" id="mce-success-response" style="display: none;"></div>
+    <div id="mc_embed_shell">
+      <div id="mc_embed_signup">
+        <form action="https://tedsbrainscience.us15.list-manage.com/subscribe/post?u=6cc24d844e32d5cbc7dda7955&amp;id=14538d79ab&amp;f_id=00d198e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+          <div id="mc_embed_signup_scroll">
+            <h2>Subscribe</h2>
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" autocomplete="email"></div>
+            <div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+            <div class="mc-field-group"><label for="mce-LNAME">Last Name </label><input type="text" name="LNAME" class=" text" id="mce-LNAME" value=""></div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display: none;"></div>
+              <div class="response" id="mce-success-response" style="display: none;"></div>
+            </div>
+            <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_6cc24d844e32d5cbc7dda7955_14538d79ab" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
           </div>
-          <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_6cc24d844e32d5cbc7dda7955_14538d79ab" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
-        </div>
-      </form>
+        </form>
+      </div>
+      <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
     </div>
-    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   </div>
 
 
