--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <body>
   <div style="width:100%; max-width:500px; margin:0 auto; padding:1rem;">
-    <img src="/images/ted-and-gregs-logo.svg" style="width: 100%; height: auto;" alt="Ted and Greg's Pain Cream Logo">
+    <img src="/images/ted-and-gregs-logo.svg" style="width: 100%; height: auto; padding:0 20%" alt="Ted and Greg's Pain Cream Logo">
     <h1>Ted and Greg's Pain Cream</h1>
     <h2>Put some science on it.</h2>
 
