--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
         url('/fonts/gotham-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
+  }
+  
+  @font-face {
+    font-family: 'Cooper Black';
+    src: url('/fonts/cooper-black.woff2') format('woff2'),
+        url('/fonts/cooper-black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
   }
   /*! modern-normalize v3.0.1 | MIT License | https://github.com/sindresorhus/modern-normalize */
   *,::after,::before{box-sizing:border-box}html{font-family:system-ui,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji';line-height:1.15;-webkit-text-size-adjust:100%;tab-size:4}body{margin:0}b,strong{font-weight:bolder}code,kbd,pre,samp{font-family:ui-monospace,SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}table{border-color:currentcolor}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}legend{padding:0}progress{vertical-align:baseline}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}
@@ -217,6 +224,11 @@
     color: #005645;
     font-family: 'gothambold', sans-serif;
   }
+
+  h1, h2, h3 {
+    font-family: 'Cooper Black', sans-serif;
+    margin: 2em 0;
+  }
   #mc_embed_signup {
     max-width: 500px;
   }
@@ -224,20 +236,65 @@
   #mc_embed_signup h2 {
     margin: initial;
   }
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
+  #mc_embed_signup .mc-field-group input {
+    background-color: var(--color-green-light);
+    color: var(--color-green-dark);
+    padding: 1.5rem 1.5rem;
+    clip-path: polygon(
+      0% 10%,
+      97% 0%,
+      100% 100%,
+      3% 94%
+    );
+  }
+  #mc_embed_signup .mc-field-group input::placeholder {
+    color: var(--color-green-dark);
+    opacity: 0.7;
+  }
+  #mc_embed_signup .button {
+    background-color: var(--color-green-light);
+    color: var(--color-green-dark);
+    padding: 1.5rem 1.5rem;
+    clip-path: polygon(
+      0% 10%,
+      97% 0%,
+      100% 100%,
+      3% 94%
+    );
+    line-height: 0;
+  }
+  #mc_embed_signup .button:hover {
+    background-color: var(--color-white);
+    color: var(--color-green-dark);
+  }
   </style>
 </head>
 
 <body>
+  <div class="content-max-width px-20 text-right" style="padding-top:2rem; padding-bottom:2rem;">
+    <img src="/images/put-some-science-on-it.svg" style="width: auto; height: 7rem;" alt="Ted and Greg's Pain Cream Logo">
+  </div>
   <section class="flex flex-wrap items-end content-max-width gap-20 px-20">
     <div class="grow basis-0 min-w-0" style="min-width:300px;">
-      <img src="/images/ted-and-gregs-pain-rub-logo.svg" class="mx-auto" style="display: block; width: 70%; height: auto; padding-top:5rem;padding-bottom:5rem;" alt="Ted and Greg's Pain Cream Logo">
+      <img src="/images/ted-and-gregs-pain-rub-logo.svg" class="mx-auto" style="display: block; width: 70%; height: auto; padding-top:1rem;padding-bottom:5rem;" alt="Ted and Greg's Pain Cream Logo">
     </div>
     <div class="grow basis-0 min-w-0" style="min-width:300px;line-height: 0;">
       <img src="/images/ted-and-gregs-bench.png" style="width: 100%; height: auto;" alt="Ted and Greg's bench">
     </div>
   </section>
 
-  <section style="background-color:var(--color-green-dark); color:var(--color-white); padding:2rem 1rem;">
+  <section style="background-color:var(--color-green-dark); color:var(--color-white); padding:2rem 1rem 0 1rem; margin-bottom:3rem;">
 
     <div class="content-max-width px-20">
       <div class="text-center">
@@ -251,20 +308,20 @@
 
 
       <div id="mc_embed_shell">
-        <div id="mc_embed_signup">
+        <div id="mc_embed_signup" class="mx-auto">
           <form action="https://tedsbrainscience.us15.list-manage.com/subscribe/post?u=6cc24d844e32d5cbc7dda7955&amp;id=14538d79ab&amp;f_id=00d198e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
             <div id="mc_embed_signup_scroll">
-              <h2>Subscribe</h2>
-              <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-              <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" autocomplete="email"></div>
-              <div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""></div>
-              <div class="mc-field-group"><label for="mce-LNAME">Last Name </label><input type="text" name="LNAME" class=" text" id="mce-LNAME" value=""></div>
+              <h2 style="color: var(--color-green-light)">Subscribe</h2>
+              <div class="indicates-required sr-only"><span class="asterisk">*</span> indicates required</div>
+              <div class="mc-field-group"><label for="mce-EMAIL" class="sr-only">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" autocomplete="email" placeholder="Email Address*"></div>
+              <div class="mc-field-group"><label for="mce-FNAME" class="sr-only">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value="" placeholder="First Name"></div>
+              <div class="mc-field-group"><label for="mce-LNAME" class="sr-only">Last Name </label><input type="text" name="LNAME" class=" text" id="mce-LNAME" value="" placeholder="Last Name"></div>
               <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display: none;"></div>
                 <div class="response" id="mce-success-response" style="display: none;"></div>
               </div>
               <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_6cc24d844e32d5cbc7dda7955_14538d79ab" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
+              <div class="clear text-right"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
             </div>
           </form>
         </div>
@@ -272,13 +329,16 @@
       </div>
     </div>
       
-  </section>
-
-  <section class="content-max-width px-20 flex justify-between" style="padding:2rem 1rem;">
-    <div class="text-center">
-      <a href="">Are you a retailer who wants to stock Ted and Greg’s? Click here.</a>
+    <div class="content-max-width px-20 flex justify-between items-center" style="padding:2rem 1rem 0 1rem;">
+      <img src="/images/footer-science-left.svg" style="width: auto; height: 8rem;" alt="Ted and Greg's Pain Cream Bottles">
+      <div class="text-center">
+        <a href="" style="color:var(--color-green-light);font-family: 'Cooper Black', sans-serif; font-size:1.5rem">Are you a retailer who wants to stock Ted and Greg’s? Click here.</a>
+      </div>
+      <img src="/images/footer-science-right.svg" style="width: auto; height: 8rem;" alt="Ted and Greg's Pain Cream Bottles">
     </div>
   </section>
+
+
 
 
 </body>
